envoy-gateway/extra/endpointslices-unifi-noa-re.yaml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: endpointslice-unifi-noa-re.yaml
  namespace: envoy-gateway-system
  labels:
    kubernetes.io/service-name: unifi-noa-re
    endpointslice.kubernetes.io/managed-by: cluster-admins
addressType: IPv4
ports:
  - name: https
    protocol: TCP
    appProtocol: kubernetes.io/wss
    port: 11443
endpoints:
  - addresses:
      - "192.168.168.207"
    conditions:
      ready: true
