envoy-gateway/extra/service-unifi-noa-re.yaml
apiVersion: v1
kind: Service
metadata:
  name: unifi-noa-re
  namespace: envoy-gateway-system
spec:
  ports:
    - name: https
      protocol: TCP
      appProtocol: kubernetes.io/wss
      port: 443
      targetPort: 11443
